cmake_minimum_required(VERSION 2.8.11)

project(libCommon CXX)

#set(LIBCOMMON_VERSION_MAJOR "1")
#set(LIBCOMMON_VERSION_MINOR "0")
#set(LIBCOMMON_VERSION_MICRO "0")
#set(LIBCOMMON_VERSION ${LIBCOMMON_VERSION_MAJOR}.${LIBCOMMON_VERSION_MINOR}.${LIBCOMMON_VERSION_MICRO})
#add_definitions(-DLIBCOMMON_VERSION_MAJOR=${LIBCOMMON_VERSION_MAJOR})
#add_definitions(-DLIBCOMMON_VERSION_MINOR=${LIBCOMMON_VERSION_MINOR})
#add_definitions(-DLIBCOMMON_VERSION_MICRO=${LIBCOMMON_VERSION_MICRO})

# CPP flags on debug / release mode
if(MSVC)
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MDd /DNOMINMAX")
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MD /DNOMINMAX")
    set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELEASE} /MD /DNOMINMAX /Zi")
    set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_RELEASE} /MD /DNOMINMAX")
else()
    set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -fPIC -pg -g")
    set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -fPIC -O3")
endif()

ADD_SUBDIRECTORY(src)
